# chip8-emulator

./: CMakeLists.txt  Core.cpp  Core.h  Dockerfile  main.cpp  opcode.cpp
src/: CMakeLists.txt  Core.cpp  Core.h  main.cpp  opcode.h
